--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <header id="header">
     <nav class="nav container">
-        <a class="logo" href="#"><img id="header-img" src="static/img/logo.png"></a>
+        <a class="logo" href="#"><img id="header-img" src="static/img/Logo.png"></a>
         <ul class="nav__list">
           <li class="nav__item"><a href="#">Feature</a></li>
           <li class="nav__item"><a href="#">Download</a></li>
